try to fix scrolling on mobile

--- a/static-html-directory/style.css
+++ b/static-html-directory/style.css
@@ -460,6 +460,7 @@ h3::first-letter {
   text-align: center;
   cursor: pointer;
   width: 100%;
+  z-index: 99;
 }
 
 .button_menu {
@@ -512,6 +513,8 @@ h3::first-letter {
     background-size:cover; 
     background-repeat: no-repeat;     
     background-position: center center;
+    overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
   }
 }
 @media screen and (max-width : 900px ){
@@ -520,8 +523,12 @@ h3::first-letter {
 	width: 48%;
 	display: block;
 	background-color: white;
+	overflow-y: scroll !important;
+	-webkit-overflow-scrolling: touch;
     }
     .background {
+	overflow-y: scroll !important;
+	-webkit-overflow-scrolling: touch;
 	background-repeat: no-repeat;
 	height: 100%;
 	width: 100%;
@@ -529,11 +536,15 @@ h3::first-letter {
 	background-size:cover; 
 	background-repeat: no-repeat;     
 	background-position:center center;
+	overflow: scroll;
+	--webkit-overflow-scrolling: touch;
     }
 
 
 /* Caption text */
 .text {
+    overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
     background-color: rgba(4,23,37,0.6);
     color: #e3f3ff;
     font-size: 20px;
@@ -547,6 +558,8 @@ h3::first-letter {
 
 /* Number text (1/3 etc) */
 .date {
+    overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
     font-family:"Impact";
     font-size: 35px;
     padding: 50px 100px;
@@ -556,17 +569,31 @@ h3::first-letter {
 }
 
 @media screen and (max-width : 700px ){ 
-  #nav {display: none;}
-    .button_menu {display:inline-block;}
-    #panel_aree .content h1{text-align: center;font-size:18px; font-weight: 300;line-height: 1.4; height:70px;}
+  #nav {    overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
+    display: none;}
+  .button_menu {display:inline-block;
+	           overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
+}
+  #panel_aree .content h1{text-align: center;font-size:18px; font-weight: 300;line-height: 1.4; height:70px;
+			     overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
+}
     .column {
 	width: 100%;
 	display: block;
 	background-color: white;
+    overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
     }
     
-    #panel_superc .content h2{text-align: center;font-size:20px;}
-    #panel_aree .content h2{text-align: center;font-size:20px; margin-top:auto;}
+    #panel_superc .content h2{text-align: center;font-size:20px;    overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
+}
+    #panel_aree .content h2{text-align: center;font-size:20px; margin-top:auto;    overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
+}
 
   .background {
     background-repeat: no-repeat;
@@ -576,12 +603,17 @@ h3::first-letter {
     background-size:cover; 
     background-repeat: no-repeat;     
     background-position: center center;
+    overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
+
 }
 
 }
  /* On smaller screens, decrease text size */
  @media only screen and (max-width: 300px) {
      .prev, .next,.text {font-size: 11px}
+    overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
  }
 
 <style id="Cartel2_14975_Styles">
